// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`columnCount renders 0 1`] = `
Array [
  .c0 {
  -webkit-column-count: 0;
  column-count: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-column-count: 0;
  column-count: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-column-count: 0;
  column-count: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-column-count: 0;
  column-count: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`columnCount renders function 1`] = `
Array [
  .c0 {
  -webkit-column-count: hasnot;
  column-count: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-column-count: has;
  column-count: has;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-column-count: hasnot;
  column-count: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-column-count: has;
  column-count: has;
}

<div
    className="c0"
  />,
]
`;

exports[`columnCount renders invalid theme path 1`] = `
Array [
  .c0 {
  -webkit-column-count: invalid.path.1;
  column-count: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-column-count: invalid.path.1;
  column-count: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-column-count: invalid.path.1;
  column-count: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-column-count: invalid.path.1;
  column-count: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`columnCount renders negative number 1`] = `
Array [
  .c0 {
  -webkit-column-count: -54881;
  column-count: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-column-count: -54881;
  column-count: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-column-count: -42365;
  column-count: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-column-count: -42365;
  column-count: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`columnCount renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  -webkit-column-count: July;
  column-count: July;
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-column-count: August;
    column-count: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-column-count: September;
    column-count: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-column-count: November;
    column-count: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-column-count: August;
    column-count: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  -webkit-column-count: July;
  column-count: July;
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-column-count: August;
    column-count: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-column-count: September;
    column-count: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-column-count: November;
    column-count: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-column-count: August;
    column-count: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  -webkit-column-count: January;
  column-count: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-column-count: December;
    column-count: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-column-count: April;
    column-count: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-column-count: May;
    column-count: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-column-count: June;
    column-count: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-column-count: January;
  column-count: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-column-count: December;
    column-count: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-column-count: April;
    column-count: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-column-count: May;
    column-count: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-column-count: June;
    column-count: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`columnCount renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    -webkit-column-count: July;
    column-count: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-column-count: August;
    column-count: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-column-count: September;
    column-count: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-column-count: November;
    column-count: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    -webkit-column-count: July;
    column-count: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-column-count: August;
    column-count: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-column-count: September;
    column-count: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-column-count: November;
    column-count: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-column-count: May;
    column-count: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-column-count: June;
    column-count: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-column-count: April;
    column-count: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-column-count: November;
    column-count: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-column-count: May;
    column-count: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-column-count: June;
    column-count: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-column-count: April;
    column-count: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-column-count: November;
    column-count: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`columnCount renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  -webkit-column-count: July;
  column-count: July;
}

@media May {
  .c0 {
    -webkit-column-count: August;
    column-count: August;
  }
}

@media April {
  .c0 {
    -webkit-column-count: September;
    column-count: September;
  }
}

@media January {
  .c0 {
    -webkit-column-count: November;
    column-count: November;
  }
}

@media April {
  .c0 {
    -webkit-column-count: August;
    column-count: August;
  }
}

@media June {
  .c0 {
    -webkit-column-count: November;
    column-count: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  -webkit-column-count: July;
  column-count: July;
}

@media May {
  .c0 {
    -webkit-column-count: August;
    column-count: August;
  }
}

@media April {
  .c0 {
    -webkit-column-count: September;
    column-count: September;
  }
}

@media January {
  .c0 {
    -webkit-column-count: November;
    column-count: November;
  }
}

@media April {
  .c0 {
    -webkit-column-count: August;
    column-count: August;
  }
}

@media June {
  .c0 {
    -webkit-column-count: November;
    column-count: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  -webkit-column-count: April;
  column-count: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-column-count: November;
    column-count: November;
  }
}

@media April {
  .c0 {
    -webkit-column-count: January;
    column-count: January;
  }
}

@media January {
  .c0 {
    -webkit-column-count: December;
    column-count: December;
  }
}

@media April {
  .c0 {
    -webkit-column-count: April;
    column-count: April;
  }
}

@media June {
  .c0 {
    -webkit-column-count: May;
    column-count: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-column-count: April;
  column-count: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-column-count: November;
    column-count: November;
  }
}

@media April {
  .c0 {
    -webkit-column-count: January;
    column-count: January;
  }
}

@media January {
  .c0 {
    -webkit-column-count: December;
    column-count: December;
  }
}

@media April {
  .c0 {
    -webkit-column-count: April;
    column-count: April;
  }
}

@media June {
  .c0 {
    -webkit-column-count: May;
    column-count: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`columnCount renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    -webkit-column-count: July;
    column-count: July;
  }
}

@media April {
  .c0 {
    -webkit-column-count: August;
    column-count: August;
  }
}

@media January {
  .c0 {
    -webkit-column-count: September;
    column-count: September;
  }
}

@media April {
  .c0 {
    -webkit-column-count: November;
    column-count: November;
  }
}

@media June {
  .c0 {
    -webkit-column-count: August;
    column-count: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    -webkit-column-count: July;
    column-count: July;
  }
}

@media April {
  .c0 {
    -webkit-column-count: August;
    column-count: August;
  }
}

@media January {
  .c0 {
    -webkit-column-count: September;
    column-count: September;
  }
}

@media April {
  .c0 {
    -webkit-column-count: November;
    column-count: November;
  }
}

@media June {
  .c0 {
    -webkit-column-count: August;
    column-count: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-column-count: January;
    column-count: January;
  }
}

@media April {
  .c0 {
    -webkit-column-count: December;
    column-count: December;
  }
}

@media January {
  .c0 {
    -webkit-column-count: April;
    column-count: April;
  }
}

@media April {
  .c0 {
    -webkit-column-count: May;
    column-count: May;
  }
}

@media June {
  .c0 {
    -webkit-column-count: June;
    column-count: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-column-count: January;
    column-count: January;
  }
}

@media April {
  .c0 {
    -webkit-column-count: December;
    column-count: December;
  }
}

@media January {
  .c0 {
    -webkit-column-count: April;
    column-count: April;
  }
}

@media April {
  .c0 {
    -webkit-column-count: May;
    column-count: May;
  }
}

@media June {
  .c0 {
    -webkit-column-count: June;
    column-count: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`columnCount renders postitive number 1`] = `
Array [
  .c0 {
  -webkit-column-count: 54881;
  column-count: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-column-count: 54881;
  column-count: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-column-count: 42365;
  column-count: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-column-count: 42365;
  column-count: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`columnCount renders string 1`] = `
Array [
  .c0 {
  -webkit-column-count: July;
  column-count: July;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-column-count: July;
  column-count: July;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-column-count: June;
  column-count: June;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-column-count: June;
  column-count: June;
}

<div
    className="c0"
  />,
]
`;

exports[`columnCount renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`columnCount renders valid theme path 1`] = `
Array [
  .c0 {
  -webkit-column-count: DarkSlateBlue;
  column-count: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-column-count: DarkSlateBlue;
  column-count: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-column-count: DarkSlateBlue;
  column-count: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-column-count: DarkSlateBlue;
  column-count: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
